refactor(mentor): *BinaryContentRepository의 불필요한 메서드 삭제, 의도와 다르게 작성되어 있던 내용 변경
- deleteByMessageId가 사용되지 않고 있어 삭제.
- findAllByIdIn가 의도에 맞게 binaryContent의 id 목록으로 조회할 수 있도록 개선.
- BinaryContentController에서 여러 파일을 조회하는 findFiles 메서드를 findAllByIdIn을 이용해서 개선